# inx-builder

./: README.md  pyproject.toml  requirements.txt  setup.py
output/: mondriangenerator.inx  mondriangenerator.py
src/inx_builder/: __init__.py  builder.py  cli.py  config.py  templates.py
templates/basic_effect/: README.md.j2  extension.inx.j2  extension.py.j2
templates/mondrian_render/: README.md.j2  extension.inx.j2  extension.py.j2
