[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inx-builder"
version = "0.1.0"
description = "Command-line tool for building Inkscape extensions"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["inkscape", "extension", "builder", "tool"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "Jinja2>=3.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.scripts]
inx-builder = "inx_builder.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/inx-builder"
Bug-Tracker = "https://github.com/yourusername/inx-builder/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["inx_builder*"]

[tool.setuptools.package-data]
inx_builder = ["templates/**/*"]

[tool.black]
line-length = 88
target-version = ['py38']
