[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inx-builder"
version = "0.1.0"
description = "Command-line factory for Inkscape extensions - build with speed!"
readme = "README.md"
authors = [
    {name = "yusdesign", email = "swiftcase@gmail.com"}
]
license = {text = "MIT"}
keywords = ["inkscape", "extension", "builder", "cli", "template", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "Jinja2>=3.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.scripts]
inx = "inx_builder.cli:main"  # Short command!
inx-builder = "inx_builder.cli:main"  # Long command for clarity

[project.urls]
Homepage = "https://github.com/yusdesign/inx-builder"
Repository = "https://github.com/yusdesign/inx-builder.git"
"Issue Tracker" = "https://github.com/yusdesign/inx-builder/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["templates/**/*", "examples/**/*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
